test: modify pnpm build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           pnpm install
 
       - name: Build project
-        run: pnpm run build
+        run: pnpm build
 
   deploy:
     runs-on: ubuntu-latest
