--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,9 +58,9 @@ jobs:
           git rm -rf .
 
           # Adiciona os arquivos necessários
-          cp -r ../dist/* .
-          cp ../package.json .
-          cp ../readme.md .
+          cp -r ./dist/* .
+          cp ./package.json .
+          cp ./readme.md .
 
           # Commit e push das alterações
           git add .
