--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,31 +6,8 @@ on:
       - dev
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-          registry-url: "https://registry.npmjs.org/"
-
-      - name: Install dependencies
-        run: |
-          npm install -g pnpm
-          pnpm install
-
-      - name: Build project
-        run: pnpm build
-
   deploy:
     runs-on: ubuntu-latest
-
-    needs: build
 
     steps:
       - name: Checkout repository
@@ -62,9 +39,9 @@ jobs:
 
 
           # Adiciona os arquivos necessários
-          cp -r dist/* .
-          cp package.json .
-          cp READEME.md .
+          cp -r ../dist/* .
+          cp ../package.json .
+          cp ../READEME.md .
 
           # Commit e push das alterações
           git add .
