--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,4 @@ jobs:
           # Commit e push das alterações
           git add .
           git commit -m "Deploy from dev to main"
-          git push
+          git push --set-upstream origin main
