--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,3 +38,5 @@ jobs:
           git add .
           git commit -m "Deploy from dev to main"
           git push --set-upstream origin main
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
