--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
             git checkout main
           fi
 
+          git rm -rf .
+
           # Remove todos os arquivos na branch main
           git checkout main
           git rm -rf .github lib public src .gitignore .nvmrc .eslintrc.cjs components.json index.html pnpm-lock.yaml postcss.config.js tailwind.config.ts tsconfig-build.json tsconfig.json tsconfig.node.json vite.config.ts
