--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git config pull.rebase false
 
           # Remove todos os arquivos na branch main
           if ! git show-ref --quiet refs/heads/main; then
