--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,30 @@ on:
       - dev
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          registry-url: "https://registry.npmjs.org/"
+
+      - name: Install dependencies
+        run: |
+          npm install -g pnpm
+          pnpm install
+      - name: Build project
+        run: pnpm build
+
   deploy:
     runs-on: ubuntu-latest
+
+    needs: build
 
     steps:
       - name: Checkout repository
@@ -24,16 +46,13 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git config pull.rebase true
-
           if ! git show-ref --quiet refs/heads/main; then
             git checkout -b main
           else
             git checkout main
           fi
-
           # Remove todos os arquivos na branch main
           git rm -rf .github .gitignore lib public src .nvmrc .eslintrc.cjs components.json index.html pnpm-lock.yaml postcss.config.js tailwind.config.ts tsconfig-build.json tsconfig.json tsconfig.node.json vite.config.ts
-
           # Commit e push das alterações
           git add .
           git commit -m "Deploy from dev to main"
